--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,25 @@
-.App {
-  text-align: center;
+.container{
+  background-color:rgba(0, 0, 0, 0.137);
+  margin: 200px;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+h1{
+  margin-left: 190px;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
+img {
+  width: 80px;
+  display: flex;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button{
+  margin: 12px;
+  padding: 8px 16px;
+  display:inline-flex;
+}
+th{
+  margin:5px;
+  padding: 3px 7px;
+}
+td{
+  margin:0;
+  padding: 3px 20px;
 }
